--- a/trade-experts.html
+++ b/trade-experts.html
@@ -11,7 +11,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
    
-    <title>BULL BEAR TRADERS</title>
+    <title>TRADE EXPERTS</title>
 <style>
 
     body {
@@ -118,15 +118,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       don't have <strong>Telegram</strong> yet? Try it now!
   </div>
   <div class="team-logo-wrapper">
-      <div class="team-logo" style="background: url('IMG_20230227_234114_489.jpg');">
+      <div class="team-logo" style="background: url('photo_2024-02-24 20.24.09.jpeg');">
       </div>
       <div class="text-wrapper">
-          <h1 class="avitr-t-name avitor-icon-link"> <img src="IMG_20230227_234114_489.jpg" alt="">Bull Bear Traders</h1>
-          <p class="gray-text">1,80,700 subscribers</p>
-          <p class="info-text"> <img src="IMG_20230227_234114_489.jpg" class="user-icon" alt=""> Option Buying In Nifty And Banknifty <br><br>START YOUR PROFITABLE TRADING JOURNEY FROM TODAY</p>
+          <h1 class="avitr-t-name avitor-icon-link"> <img src="photo_2024-02-24 20.24.09.jpeg" alt="">Trade Experts</h1>
+          <p class="gray-text">1,08,600 subscribers</p>
+          <p class="info-text"> <img src="photo_2024-02-24 20.24.09.jpeg" class="user-icon" alt=""> Option Buying In Nifty And Banknifty <br><br>START YOUR PROFITABLE TRADING JOURNEY FROM TODAY</p>
           <p class="Link-channer "> <img src="righttik.png" class="user-icon" alt=""> India's best channel for Option Buying In Nifty And Banknifty</p>
-          <a id="contactButton" href="https://telegram.me/+hJ4OPz4Cs-04ZjBl" class="view-btn" target="_blank" rel="noopener noreferrer"> View in telegram</a>
-          <p class="info-link-text">if you have <strong>Telegram</strong> you can view and join <a href="https://telegram.me/+hJ4OPz4Cs-04ZjBl" class="avitor-link avitor-icon-link" target="_blank" rel="noopener noreferrer"> <img src="IMG_20230227_234114_489.jpg" class="user-icon" alt=""> <strong>Bull Bear Traders</strong> </a> right away.</p>
+          <a id="contactButton" href="https://t.me/+TlVAmN8Yur8zMzA1" class="view-btn" target="_blank" rel="noopener noreferrer"> View in telegram</a>
+          <p class="info-link-text">if you have <strong>Telegram</strong> you can view and join <a href="https://t.me/+TlVAmN8Yur8zMzA1" class="avitor-link avitor-icon-link" target="_blank" rel="noopener noreferrer"> <img src="IMG_20230227_234114_489.jpg" class="user-icon" alt=""> <strong>Bull Bear Traders</strong> </a> right away.</p>
       </div>
   </div>
 	    <!-- Google Tag Manager (noscript) -->
