--- a/trade-experts.html
+++ b/trade-experts.html
@@ -125,8 +125,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <p class="gray-text">1,08,600 subscribers</p>
           <p class="info-text"> <img src="photo_2024-02-24 20.24.09.jpeg" class="user-icon" alt=""> Option Buying In Nifty And Banknifty <br><br>START YOUR PROFITABLE TRADING JOURNEY FROM TODAY</p>
           <p class="Link-channer "> <img src="righttik.png" class="user-icon" alt=""> India's best channel for Option Buying In Nifty And Banknifty</p>
-          <a id="contactButton" href="https://telegram.me/+TlVAmN8Yur8zMzA1" class="view-btn" target="_blank" rel="noopener noreferrer"> View in telegram</a>
-          <p class="info-link-text">if you have <strong>Telegram</strong> you can view and join <a href="https://telegram.me/+TlVAmN8Yur8zMzA1" class="avitor-link avitor-icon-link" target="_blank" rel="noopener noreferrer"> <img src="IMG_20230227_234114_489.jpg" class="user-icon" alt=""> <strong>Trade Experts</strong> </a> right away.</p>
+          <a id="contactButton" href="https://t.me/+SRO8ukWQ5FcxZGZl" class="view-btn" target="_blank" rel="noopener noreferrer"> View in telegram</a>
+          <p class="info-link-text">if you have <strong>Telegram</strong> you can view and join <a href="https://t.me/+SRO8ukWQ5FcxZGZl" class="avitor-link avitor-icon-link" target="_blank" rel="noopener noreferrer"> <img src="IMG_20230227_234114_489.jpg" class="user-icon" alt=""> <strong>Trade Experts</strong> </a> right away.</p>
       </div>
   </div>
 	    <!-- Google Tag Manager (noscript) -->
